package domain.user;

public enum Role {
}
